@@ -2,7 +2,6 @@ AUTOMAKE_OPTIONS = 1.9
 
 EXTRA_DIST = PLATFORMS PROBLEMS LSM.in version version.h.in\
 	     git.spec.in mkvcs prepare \
-	     lib/tilde.c lib/tilde.h lib/history.c lib/history.h \
 	     m4/gnulib-tool.m4 m4/gnulib-cache.m4 \
 	     m4/absolute-header.m4 m4/gnulib-common.m4
 
